feat: add ability to override api host